Update tests Update LicenceBlocksRestController to call service method